renaming of few components

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -6,11 +6,16 @@
       <div class="container">
         <img class="img-fluid" src="img/profile.png" alt="">
         <div class="intro-text">
-          <span class="name">Servica Catalog</span>
+          <span class="name">Catálogo de Servicios</span>
           <br/>
-          <span class="skills">Service Catalog Initial App</span>
+          <span class="skills">Kool-Aid</span>
         </div>
       </div>
     </header>
 </div>
+
+<div class="row">
+  
+</div>
+
 {% endblock %}
