Created reference template

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -1,20 +1,64 @@
 {% extends "layout.html" %}
 {% block body %}
-<div>
-    <!-- Header -->
-    <header class="masthead">
-      <div class="container">
-        <img class="img-fluid" src="img/profile.png" alt="">
-        <div class="intro-text">
-          <span class="name">Catálogo de Servicios</span>
-          <br/>
-          <span class="skills">Kool-Aid</span>
-        </div>
-      </div>
-    </header>
-</div>
 
 <div class="row">
+  <div class="col-lg-12">
+    <h1>Servicios</h1>
+  <hr>
+  </div>
+  
+  <!-- BEGIN SERVICE -->
+  <div class="col-lg-4">
+    
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h3 class="panel-title">Web Authentication and Authorization</h3>
+      </div>
+      <div class="panel-body">
+        Servicio que provee seguridad a los miembros de la red mediante sistemas que protegen los datos de ingresos no autorizados. 
+      </div>
+    </div>
+    
+    
+  </div>
+  <!-- END SERVICE -->
+  
+  
+  <!-- BEGIN SERVICE -->
+  <div class="col-lg-4">
+    <a href="#">
+        <div class="panel panel-primary">
+          <div class="panel-heading">
+            <h3 class="panel-title">Website Building and Consulting</h3>
+          </div>
+          <div class="panel-body">
+            Se ofrece una variedad de soluciones visualmente atractivas con diseños de páginas flexibles. Se elabora una estrategia integral de proyecto web o se brinda acompañamiento 
+            en el proceso de contratación de proveedores altamente calificados. 
+          </div>
+        </div>
+    </a>
+
+    
+    
+  </div>
+  <!-- END SERVICE -->
+  
+  <!-- BEGIN SERVICE -->
+  <div class="col-lg-4">
+    
+    <div class="panel panel-primary">
+      <div class="panel-heading">
+        <h3 class="panel-title">Servicio de creación de Virtual Hosts</h3>
+      </div>
+      <div class="panel-body">
+        Permite cambiar un URL largo a uno más descriptivo y corto para que la dirección de una página sea más fácil de acceder y recordar. 
+      </div>
+    </div>
+    
+    
+  </div>
+  <!-- END SERVICE -->
+  
   
 </div>
 
