--- a/templates/home/auth_service.html
+++ b/templates/home/auth_service.html
@@ -7,17 +7,28 @@
         
         <h1>Servicio de Autenticación y Autorización</h1>
         <hr>
-        <div class="col-lg-12">
+        <div class="col-lg-6">
             <div class="list-group">
                 
               <a href="#" class="list-group-item">
                 <h4 class="list-group-item-heading">Descripción</h4>
-                <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+                <p class="list-group-item-text">
+                    Este servicio contempla la gestión de cuentas de usuarios. Asignación de permisos por medio de grupos o "entitlements". Adicionalmente se provee autenticación de dos factores (2FA).
+                </p>
+              </a>
+              
+              <a href="#" class="list-group-item">
+                <h4 class="list-group-item-heading">Clasificación del Servicio</h4>
+                <p class="list-group-item-text text-success">
+                    SOFTWARE Y HARDWARE
+                </p>
               </a>
               
               <a href="#" class="list-group-item">
                 <h4 class="list-group-item-heading">Disponibilidad</h4>
-                <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+                <p class="list-group-item-text">
+                    Este servicio está disponible 7 días a la semana durante las 24 horas del día.
+                </p>
               </a>
               
               <a href="#" class="list-group-item">
