Falta Disponibilidad Meta.

--- a/templates/home/consulting_service.html
+++ b/templates/home/consulting_service.html
@@ -14,7 +14,7 @@
                 <h4 class="list-group-item-heading">Descripción</h4>
                 <p class="list-group-item-text">
                     Este servicio ofrece soluciones web rápidas, simples y visualmente atractivas con diseños dinámicos e interfaces intuitivas para
-                    todo tipo de empresas, que quieran un sitio pequeño con fin meramente informativo, o complejo y aplicativo.
+                    todo tipo de cliente, que desee un sitio pequeño con fin meramente informativo, o complejo y aplicativo.
                 </p>
               </a>
               
@@ -40,17 +40,18 @@
                 
               <a href="#" class="list-group-item">
                 <h4 class="list-group-item-heading">Respaldo</h4>
-                <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+                <p class="list-group-item-text">Respaldos completos semanales y respaldos incrementales diarios, dependiendo del tiepo de solución web.</p>
               </a>
               
               <a href="#" class="list-group-item">
                 <h4 class="list-group-item-heading">Representantes del Servicio</h4>
-                <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+                <p class="list-group-item-text">Equipo de desarrollo y consultoria.</p>
               </a>
               
               <a href="#" class="list-group-item">
                 <h4 class="list-group-item-heading">Importancia</h4>
-                <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+                <p class="list-group-item-text">Este servicio se considera de tipo 'core' o 'crítico' ya que ofrecer un gran valor
+                al ser uno de los puntos de entradas más importantes para los consumidores.</p>
               </a>
               
             </div>
