Disponibilidad meta agregada.

--- a/templates/home/consulting_service.html
+++ b/templates/home/consulting_service.html
@@ -34,7 +34,7 @@
               
               <a href="#" class="list-group-item">
                 <h4 class="list-group-item-heading">Disponibilidad Meta</h4>
-                <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+                <p class="list-group-item-text">Se intenta que la disponibilidad meta de este servicio sea de un 99.99%.</p>
               </a>
              
                 
