improved look and feel

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -11,9 +11,10 @@
   <div class="col-lg-4">
     
     <a href="{{url_for('service_1')}}">
-      <div class="panel panel-primary" style="min-height: 15em;">
+      <div class="panel panel-primary" style="min-height: 18em;">
         <div class="panel-heading">
-          <h3 class="panel-title">Web Authentication and Authorization</h3>
+          <i style="color: yellow;" class="fa fa-shield fa-5x" aria-hidden="true"></i>
+          <h3 class="panel-title">Servicio de Autenticación y Autorización</h3>
         </div>
         <div class="panel-body text-justify">
           Este servicio contempla la gestión de cuentas de usuarios. Asignación de permisos por medio de grupos o "entitlements". Adicionalmente se provee autenticación de dos factores (2FA).
@@ -29,9 +30,10 @@
   <div class="col-lg-4">
     <a href="#">
       
-        <div class="panel panel-primary" style="min-height: 15em;">
+        <div class="panel panel-primary" style="min-height: 18em;">
           <div class="panel-heading">
-            <h3 class="panel-title">Website Building and Consulting</h3>
+            <i style="color: yellow;" class="fa fa-html5 fa-5x" aria-hidden="true"></i>
+            <h3 class="panel-title">Servicio de Diseño e Implementación de Sitios Web</h3>
           </div>
           <div class="panel-body text-justify">
               Se ofrece una variedad de soluciones visualmente atractivas con diseños de páginas flexibles. Se elabora una estrategia integral de proyecto web o se brinda acompañamiento 
@@ -48,8 +50,9 @@
   <!-- BEGIN SERVICE -->
   <div class="col-lg-4">
     
-    <div class="panel panel-primary" style="min-height: 15em;">
+    <div class="panel panel-primary" style="min-height: 18em;">
       <div class="panel-heading">
+        <i style="color: yellow;" class="fa fa-server fa-5x" aria-hidden="true"></i>
         <h3 class="panel-title">Servicio de creación de Virtual Hosts</h3>
       </div>
       <div class="panel-body text-justify">
@@ -100,7 +103,7 @@
         Catálogo de Servicios &nbsp;&nbsp; <i class="fa fa-check" style="color: green;" aria-hidden="true"></i>
       </a>
       <a href="#" class="list-group-item">
-        Service Level Agreements (SLAs) (en progreso)
+        Service Level Agreements (SLAs) <strong>(en progreso)</strong>
       </a>
     </div>
   </div>
