Agregado servicio de virtual host y corregido detalle en consultoria.

--- a/templates/home/hosting_service.html
+++ b/templates/home/hosting_service.html
@@ -5,7 +5,7 @@
     
     <div class="col-lg-12">
         
-        <h1>Servicio de Desarrollo y Consultoria</h1>
+        <h1>Servicio de creación de virtual hosts</h1>
         <hr>
         <div class="col-lg-6">
             <div class="list-group">
@@ -13,8 +13,8 @@
               <a href="#" class="list-group-item">
                 <h4 class="list-group-item-heading">Descripción</h4>
                 <p class="list-group-item-text">
-                    Este servicio ofrece soluciones web rápidas, simples y visualmente atractivas con diseños dinámicos e interfaces intuitivas para
-                    todo tipo de cliente.
+                    Este servicio ofrece mejorar el acceso a una solución web, transformando un URL largo a uno más
+                    corto y descriptivo. Esto con el fin de facilitar el acceso a la página y hacerla más memorable.
                 </p>
               </a>
               
@@ -50,8 +50,9 @@
               
               <a href="#" class="list-group-item">
                 <h4 class="list-group-item-heading">Importancia</h4>
-                <p class="list-group-item-text">Este servicio se considera de tipo 'core' o 'crítico' ya que ofrecer un gran valor
-                al ser uno de los puntos de entradas más importantes para los consumidores.</p>
+                <p class="list-group-item-text">Este servicio se considera de tipo complementario, ya que no es completamente necesario para el funcionamiento
+                    de la operación como tal, sin embargo hace a la solución web más atractiva para el cliente al facilitar su acceso
+                    por medio de una URL más legible y fácil de recordar..</p>
               </a>
               
             </div>
