--- a/templates/home/hosting_service.html
+++ b/templates/home/hosting_service.html
@@ -5,7 +5,7 @@
     
     <div class="col-lg-12">
         
-        <h1>Servicio de creación de virtual hosts</h1>
+        <h1>Servicio de creación de Virtual Hosts</h1>
         <hr>
         <div class="col-lg-6">
             <div class="list-group">
@@ -45,7 +45,7 @@
               
               <a href="#" class="list-group-item">
                 <h4 class="list-group-item-heading">Representantes del Servicio</h4>
-                <p class="list-group-item-text">Equipo de desarrollo y consultoria.</p>
+                <p class="list-group-item-text">Equipo de desarrollo web.</p>
               </a>
               
               <a href="#" class="list-group-item">
