more look and feel stuff

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -12,7 +12,7 @@
     
     <a href="{{url_for('service_1')}}">
       <div class="panel panel-primary" style="min-height: 18em;">
-        <div class="panel-heading">
+        <div class="panel-heading text-center">
           <i style="color: yellow;" class="fa fa-shield fa-5x" aria-hidden="true"></i>
           <h3 class="panel-title">Servicio de Autenticación y Autorización</h3>
         </div>
@@ -31,7 +31,7 @@
     <a href="#">
       
         <div class="panel panel-primary" style="min-height: 18em;">
-          <div class="panel-heading">
+          <div class="panel-heading text-center">
             <i style="color: yellow;" class="fa fa-html5 fa-5x" aria-hidden="true"></i>
             <h3 class="panel-title">Servicio de Diseño e Implementación de Sitios Web</h3>
           </div>
@@ -51,7 +51,7 @@
   <div class="col-lg-4">
     
     <div class="panel panel-primary" style="min-height: 18em;">
-      <div class="panel-heading">
+      <div class="panel-heading text-center">
         <i style="color: yellow;" class="fa fa-server fa-5x" aria-hidden="true"></i>
         <h3 class="panel-title">Servicio de creación de Virtual Hosts</h3>
       </div>
