--- a/templates/home/auth_service.html
+++ b/templates/home/auth_service.html
@@ -4,10 +4,24 @@
 <div class="row">
     
     <div class="col-lg-12">
-        
         <h1>Servicio de Autenticación y Autorización</h1>
         <hr>
-        <div class="col-lg-6">
+    </div>
+    
+    <div class="col-lg-6">
+        <div class="panel panel-warning">
+          <div class="panel-heading">
+            <h3 class="panel-title">Datos Generales</h3>
+          </div>
+          <div class="panel-body">
+            Panel content
+          </div>
+        </div>
+    </div>
+    
+    <div class="col-lg-6">
+        
+        <div class="col-lg-12">
             <div class="list-group">
                 
               <a href="#" class="list-group-item">
