--- a/templates/home/auth_service.html
+++ b/templates/home/auth_service.html
@@ -8,18 +8,7 @@
         <hr>
     </div>
     
-    <div class="col-lg-6">
-        <div class="panel panel-warning">
-          <div class="panel-heading">
-            <h3 class="panel-title">Datos Generales</h3>
-          </div>
-          <div class="panel-body">
-            Panel content
-          </div>
-        </div>
-    </div>
-    
-    <div class="col-lg-6">
+    <div class="col-lg-12">
         
         <div class="col-lg-12">
             <div class="list-group">
@@ -47,29 +36,39 @@
               
               <a href="#" class="list-group-item">
                 <h4 class="list-group-item-heading">Disponibilidad Meta</h4>
-                <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+                <p class="list-group-item-text">
+                  99.99% de disponibilidad, 7 días a la semana durante las 24 horas al día.
+                </p>
               </a>
              
                 
               <a href="#" class="list-group-item">
                 <h4 class="list-group-item-heading">Respaldo</h4>
-                <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+                <p class="list-group-item-text">
+                  Se realizan respaldos incrementales todos los días durante la noche. Una vez a la semana se realizan respaldos completos de las bases de datos y 
+                  se almacenan en cintas magnéticas. Los sistemas cuentan con redundancia.
+                </p>
               </a>
               
               <a href="#" class="list-group-item">
                 <h4 class="list-group-item-heading">Representantes del Servicio</h4>
-                <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+                <p class="list-group-item-text">
+                  
+                </p>
               </a>
               
               <a href="#" class="list-group-item">
                 <h4 class="list-group-item-heading">Importancia</h4>
-                <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+                <p class="list-group-item-text">
+
+                </p>
               </a>
               
             </div>
         </div>
         
     </div>
+    <!-- COL ENDS -->
 
 </div>
 
