--- a/templates/layout.html
+++ b/templates/layout.html
@@ -27,14 +27,15 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#"><strong>SERVICE</strong> | CATALOG</a>
+              <a class="navbar-brand" href="#"><strong>Kool-Aid</strong> | ITIL</a>
             </div>
             <div id="navbar" class="collapse navbar-collapse">
               <ul class="nav navbar-nav">
-                <li><a href="/">Home</a></li>
+                <li><a href="/">Catálogo</a></li>
+                <li><a href="{{url_for('get_casos')}}">Casos</a></li>
               </ul>
               <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">*</a></li>
+                <li><a href="">*</a></li>
 
               </ul>
             </div><!--/.nav-collapse -->
