--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -3,7 +3,7 @@
 
 <div class="row">
   <div class="col-lg-12">
-    <h1>Servicios</h1>
+    <h1>Catálogo de Servicios</h1>
     <hr>
   </div>
   
@@ -28,7 +28,7 @@
   
   <!-- BEGIN SERVICE -->
   <div class="col-lg-4">
-    <a href="#">
+    <a href="{{url_for('service_2')}}">
       
         <div class="panel panel-primary" style="min-height: 18em;">
           <div class="panel-heading text-center">
@@ -49,16 +49,17 @@
   
   <!-- BEGIN SERVICE -->
   <div class="col-lg-4">
-    
-    <div class="panel panel-primary" style="min-height: 18em;">
-      <div class="panel-heading text-center">
-        <i style="color: yellow;" class="fa fa-server fa-5x" aria-hidden="true"></i>
-        <h3 class="panel-title">Servicio de creación de Virtual Hosts</h3>
+    <a href="{{url_for('service_3')}}">
+      <div class="panel panel-primary" style="min-height: 18em;">
+        <div class="panel-heading text-center">
+          <i style="color: yellow;" class="fa fa-server fa-5x" aria-hidden="true"></i>
+          <h3 class="panel-title">Servicio de creación de Virtual Hosts</h3>
+        </div>
+        <div class="panel-body text-justify">
+          Permite cambiar un URL largo a uno más descriptivo y corto para que la dirección de una página sea más fácil de acceder y recordar. 
+        </div>
       </div>
-      <div class="panel-body text-justify">
-        Permite cambiar un URL largo a uno más descriptivo y corto para que la dirección de una página sea más fácil de acceder y recordar. 
-      </div>
-    </div>
+    </a>
     
     
   </div>
@@ -86,7 +87,7 @@
         Roberto Roger Cruz
       </a>
       <a href="#" class="list-group-item">
-        
+        Diego Delgado Cerdas
       </a>
       <a href="#" class="list-group-item">
         Pedro Guzmán Benavides
