--- a/templates/casos/business_continuity.html
+++ b/templates/casos/business_continuity.html
@@ -32,6 +32,9 @@
             </li>
             <li>
                 ¿Considera usted que la imagen del conglomerado de los hospitales está siendo afectada?  Siendo 5 como muy alto y 1 como muy bajo, ¿qué nivel de criticidad le asignaría a la afectación de la imagen? Justifique su respuesta.
+                Nivel de criticidad - 5 'Muy Alto'. Un hospital es un lugar en el cual la gente confía para ser atentidos o asistido en caso de tener algún problema de salud y se supone que sus servicios son 24/7.
+                Sin embargo, al cancelar las operaciones por un ataque informático la confianza se pierde por el impacto que este tiene en el cliente. ¿Cómo pueden confiar su información a un hospital que no es seguro?
+                Ya que el hospital no tomó ninguna acción (no contaban con un plan de continuidad) para atender las citas críticas que fueron canceladas, la confianza se pierde aún más.
             </li>
             <li>
                 Además del impacto de imagen, ¿cuál otro tipo de impacto incurrió el conglomerado de hospitales?
