Cambio en respuesta de imagen.

--- a/templates/casos/business_continuity.html
+++ b/templates/casos/business_continuity.html
@@ -32,9 +32,11 @@
             </li>
             <li>
                 ¿Considera usted que la imagen del conglomerado de los hospitales está siendo afectada?  Siendo 5 como muy alto y 1 como muy bajo, ¿qué nivel de criticidad le asignaría a la afectación de la imagen? Justifique su respuesta.
-                Nivel de criticidad - 5 'Muy Alto'. Un hospital es un lugar en el cual la gente confía para ser atentidos o asistido en caso de tener algún problema de salud y se supone que sus servicios son 24/7.
+                Nivel de criticidad - 5 'Muy Alto'. Un hospital es un lugar en el cual la gente confía para ser atentidos o asistido en caso de tener algún problema de salud y por lo que sus servicios deben ser 24/7 y no tener interrupciones, en el caso de haberlas,
+                tener la capacidad de reponerse rápidamente.
                 Sin embargo, al cancelar las operaciones por un ataque informático la confianza se pierde por el impacto que este tiene en el cliente. ¿Cómo pueden confiar su información a un hospital que no es seguro?
-                Ya que el hospital no tomó ninguna acción (no contaban con un plan de continuidad) para atender las citas críticas que fueron canceladas, la confianza se pierde aún más.
+                ¿Cómo seguir utilizando los servicios de un hospital que no tiene plan de continuidad?
+                Ya que el hospital no tomó ninguna acción para atender las citas críticas que fueron canceladas, la gente afectada busca otra forma de solucionar sus problemas, en este caso otro hospital, abandonando este y posiblemente especular/hablar mal del mismo.
             </li>
             <li>
                 Además del impacto de imagen, ¿cuál otro tipo de impacto incurrió el conglomerado de hospitales?
