Respuesta de impactos.

--- a/templates/casos/business_continuity.html
+++ b/templates/casos/business_continuity.html
@@ -40,6 +40,10 @@
             </li>
             <li>
                 Además del impacto de imagen, ¿cuál otro tipo de impacto incurrió el conglomerado de hospitales?
+                Hubo un impacto tecnológico porque los sistemas informáticos fueron atacados y no pudieron continuar funcionando ya que la solución involucraba detenerlos y aislarlos.
+                Esto lleva a un impacto operacional porque el servicio tiene que ser interrumpido. Y finalmente se ve impactada la reputación del hospital, se supone que
+                una institución que ofrezca un servicio de esta magnitud debería estar seguro contra este tipo de ataques. Y también tiene un impacto económico porque además de las posibles
+                sanciones que sufra el hospital, la interrupción del servicio significa pérdidas por falta de flujo de efectivo.
             </li>
         </ul>
         <strong>
