Respuesta de raíz del incidente.

--- a/templates/casos/business_continuity.html
+++ b/templates/casos/business_continuity.html
@@ -55,6 +55,10 @@
             </li>
             <li>
                 Con base en el caso, ¿cuál considera usted que fue la causa raíz que originó el incidente?
+                La raíz fue no actuar o solucionar los problemas que se les mostró en una auditoría pasada, ya que fue ahí en donde
+                se les mostró que tenían debilidades a nivel de seguridad informática. Aunque claro, esto no hubiera ocurrido teniendo personal con capacidad
+                técnica más amplia en este tema que fuera capaz de configurar un nivel óptimo de seguridad informática. Sin embargo, si se hubiera tomado en cuenta la auditoría
+                esto se hubiera podido evitar.
             </li>
         </ul>
     </div>
