--- a/templates/casos/business_continuity.html
+++ b/templates/casos/business_continuity.html
@@ -27,11 +27,11 @@
 
 <div class="row">
     
+    
     <h1>Respuestas</h1>
     <hr/>
+    <h3>Incidente de continuidad</h3>
     
-    
-    <h3>Incidente de Continuidad de TI</h3>
     <!-- BEGIN RISK TABLE -->
     <div class="col-lg-12">
         <div class="panel panel-default">
