--- a/templates/casos/business_continuity.html
+++ b/templates/casos/business_continuity.html
@@ -65,7 +65,7 @@
                       podrían dejar de funcionar y como consecuencia impactar la continuidad del negocio. 
                   </td>
                   <td>
-                      [Por definir]
+                      Baja 
                   </td>
                   <td>
                       Imágen del Conglomerado. 
