--- a/templates/casos/business_continuity.html
+++ b/templates/casos/business_continuity.html
@@ -65,7 +65,7 @@
                       podrían dejar de funcionar y como consecuencia impactar la continuidad del negocio. 
                   </td>
                   <td>
-                      Baja 
+                      Baja, ya que se han tomado precauciones por el ataque.  
                   </td>
                   <td>
                       Imágen del Conglomerado. 
