--- a/templates/casos/business_continuity.html
+++ b/templates/casos/business_continuity.html
@@ -92,7 +92,76 @@
         </div>
         <!-- PANEL ENDS -->
     </div>
-    <!-- END RISK TABLE --> 
+    <!-- END RISK TABLE -->
+
+    <!-- BEGIN RISK TABLE -->
+    <div class="col-lg-12">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">
+                Tabla de Eventos y Riesgos
+            </h3>
+          </div>
+          <div class="panel-body">
+
+            <table class="table table-striped table-hover ">
+              <thead>
+
+                <tr>
+                  <th>Evento</th>
+                  <th>1</th>
+                  <th>2</th>
+                  <th>3</th>
+                </tr>
+
+              </thead>
+              <tbody>
+
+                <tr>
+                  <td>
+                      <strong class="text-warning">Impacto/Probabilidad</strong>
+                  </td>
+                  <td>
+                    1
+                  </td>
+                  <td>
+                    2
+                  </td>
+                  <td>
+                    3
+                  </td>
+                </tr>
+
+                <tr>
+                  <td>
+                    2
+                  </td>
+                  <td>
+                    2
+                  </td>
+                  <td>
+                    3
+                  </td>
+                </tr>
+
+                <tr>
+                  <td>2</td>
+                  <td>3</td>
+                  <td>3</td>
+                </tr>
+
+
+
+
+
+              </tbody>
+            </table>
+
+          </div>
+        </div>
+        <!-- PANEL ENDS -->
+    </div>
+    <!-- END RISK TABLE -->
     
     
     
