--- a/templates/casos/business_continuity.html
+++ b/templates/casos/business_continuity.html
@@ -78,11 +78,21 @@
                 </tr>
                 
                 <tr>
-                  <td>Infección de Virus Informático</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
+                  <td>
+                     <strong class="text-warning">Pérdida de Datos</strong>
+                  </td>
+                  <td>
+                    ALTO. No contar con respaldos, evita que se puedan restablecer los sistemas rápidamente.
+                  </td>
+                  <td>
+                    ALTA. Debido a que no hay respaldos, ni planes de contingencia, la probabilidad es sumamente alta de que exista pérdida de información.
+                  </td>
+                  <td>
+                    Evita que se pueda restablecer todos los sistemas rápidamente. Produce interrupción en la continuidad completa.
+                  </td>
+                  <td>
+                    SUMAMENTE ALTA. La información es crítica para todos los sistemas. 
+                  </td>
                 </tr>
 
               </tbody>
