--- a/templates/casos/business_continuity.html
+++ b/templates/casos/business_continuity.html
@@ -95,6 +95,25 @@
                   </td>
                 </tr>
 
+                <tr>
+                  <td>
+                     <strong class="text-warning">Confusión en los usuarios</strong>
+                  </td>
+                  <td>
+                    MEDIO - Los usuarios experimentan un servicio que no es el esperado y se genera confusión que puede generar presión en los puntos de atención al cliente. 
+                  </td>
+                  <td>
+                    MEDIO - Es muy probable que después de un día de no tener información, los pacientes y clientes del servicio no sepan por qué no son atendidos.
+
+                  </td>
+                  <td>
+                    El impacto es medio ya que una vez que se brinda información y se hacen aclaraciones la confusión puede mermar. 
+                  </td>
+                  <td>
+                    MEDIA. Esto puede ser resuelto una vez que otros problemas críticos hayan sido resueltos. 
+                  </td>
+                </tr>
+              
               </tbody>
             </table> 
             
