Commit previo de SLAs.

--- a/templates/home/auth_service.html
+++ b/templates/home/auth_service.html
@@ -52,13 +52,17 @@
               
               <a href="#" class="list-group-item">
                 <h4 class="list-group-item-heading">Representantes del Servicio</h4>
-                <p class="list-group-item-text">
-                  
-                </p>
+                <p class="list-group-item-text">Equipo de desarrollo web.</p>
               </a>
               
               <a href="#" class="list-group-item">
                 <h4 class="list-group-item-heading">Importancia</h4>
+                <p class="list-group-item-text">Este servicio se considera de tipo 'core' o 'crítico' ya que ofrece las funcionalidades
+                    de seguridad necesarias en cuanto a acceso para toda aplicación web.</p>
+              </a>
+
+                <a href="{{ url_for('sla_1') }}" class="list-group-item">
+                <h4 class="list-group-item-heading">Acuerdo de Nivel de Servicio</h4>
                 <p class="list-group-item-text">
 
                 </p>
