--- a/templates/home/consulting_service.html
+++ b/templates/home/consulting_service.html
@@ -53,6 +53,13 @@
                 <p class="list-group-item-text">Este servicio se considera de tipo 'core' o 'crítico' ya que ofrecer un gran valor
                 al ser uno de los puntos de entradas más importantes para los consumidores.</p>
               </a>
+
+              <a href="{{ url_for('sla_2') }}" class="list-group-item">
+                <h4 class="list-group-item-heading">Acuerdo de Nivel de Servicio</h4>
+                <p class="list-group-item-text">
+
+                </p>
+              </a>
               
             </div>
         </div>
