--- a/templates/home/hosting_service.html
+++ b/templates/home/hosting_service.html
@@ -54,6 +54,13 @@
                     de la operación como tal, sin embargo hace a la solución web más atractiva para el cliente al facilitar su acceso
                     por medio de una URL más legible y fácil de recordar..</p>
               </a>
+
+                <a href="{{ url_for('sla_3') }}" class="list-group-item">
+                <h4 class="list-group-item-heading">Acuerdo de Nivel de Servicio</h4>
+                <p class="list-group-item-text">
+
+                </p>
+              </a>
               
             </div>
         </div>
