Cambios en SLAs.

--- a/templates/servicelevel/auth_sla.html
+++ b/templates/servicelevel/auth_sla.html
@@ -30,14 +30,14 @@
               <a href="#" class="list-group-item">
                 <h4 class="list-group-item-heading">Abreviaciones</h4>
                 <p class="list-group-item-text">
-
+                    KA: Kool-Aid.
                 </p>
               </a>
 
               <a href="#" class="list-group-item">
                 <h4 class="list-group-item-heading">Descripción del servicio</h4>
                 <p class="list-group-item-text">
-
+                    Este servicio contempla la gestión de cuentas de usuarios. Asignación de permisos por medio de grupos o "entitlements". Adicionalmente se provee autenticación de dos factores (2FA).
                 </p>
               </a>
 
@@ -60,7 +60,8 @@
               <a href="#" class="list-group-item">
                 <h4 class="list-group-item-heading">Estimados</h4>
                 <p class="list-group-item-text">
-                    KA le dará el cliente un estimado inicial de su solución web el cual puede variar al final del mismo. El estimado es usualmente usado cuando el precio fijo de una solución no se puede calcular razonablemente o hay posibilidad de cambios en el proceso de creación de la solución.
+                    KA le dará el cliente un estimado inicial de la implementación de autenticación y autorización el cual puede variar al final del mismo.
+                    El estimado es usualmente usado cuando el precio fijo no se puede calcular razonablemente o hay posibilidad de cambios en el proceso de desarrollo.
                 </p>
               </a>
 
@@ -69,13 +70,13 @@
                 <p class="list-group-item-text">
                     <ul>
                       <li>
-                        De ser posible KA siempre le dará al cliente el precio fijo de la solución web.
+                        De ser posible KA siempre le dará al cliente el precio fijo del sistema de autenticación y autorización.
                       </li>
                      <li>
                         Cambios agregados a la especificación que se encuentra en un precio fijo serán tratados como variaciones.
                       </li>
                      <li>
-                        Peticiones adicionales que no están detallados en el precio original, ni descritos en el contrato serán valorados y agregado al precio final de la solución web.
+                        Peticiones adicionales que no están detallados en el precio original, ni descritos en el contrato serán valorados y agregado al precio final.
                       </li>
                     </ul>
                 </p>
@@ -84,11 +85,7 @@
               <a href="#" class="list-group-item">
                 <h4 class="list-group-item-heading">Variaciones</h4>
                 <p class="list-group-item-text">
-                    <ul>
-                      <li>
-                       Peticiones adicionales que no están detallados en el precio original, ni descritos en el contrato serán valorados y agregado al precio final de la solución web.
-                      </li>
-                    </ul>
+                       Peticiones adicionales que no están detallados en el precio original, ni descritos en el contrato serán valorados y agregado al precio final.
                 </p>
               </a>
 
@@ -97,13 +94,7 @@
                 <p class="list-group-item-text">
                    <ul>
                       <li>
-                        El código fuente de la solución web pertenecen a la propiedad intelectual de KA y no podrán ser copiados ni usados por otros miembros sin el consentimiento de KA.
-                      </li>
-                     <li>
-                        Todos los logos, isotipos, eslogan y otros elementos únicos aportados por el cliente, son propiedad intelectual del cliente. KA no tiene permiso de reutilizar ninguno de estos elementos sin consentimiento del cliente.
-                      </li>
-                     <li>
-                        Todos los scripts,styles sheets y cualquier otro archivo usado en la solución web del cliente pertenecen a la propiedad intelectual de KA y no podrán sar copiados ni usados por otros miembros sin el consentimiento de KA.
+                        El código fuente de la implentación de autorización y autenticación pertenecen a la propiedad intelectual de KA y no podrán ser copiados ni usados por otros miembros sin el consentimiento de KA.
                       </li>
                      <li>
                         Todas las consultas, funciones / procedimientos almacenados, triggers y demás elementos programados en alguna base de datos SQL / NoSQL pertenecen a la propiedad intelectual de KA y no podrán sar copiados ni usados por otros miembros sin el consentimiento de KA.
