--- a/templates/servicelevel/consulting_sla.html
+++ b/templates/servicelevel/consulting_sla.html
@@ -16,28 +16,29 @@
             <a href="#" class="list-group-item">
                 <h4 class="list-group-item-heading">Nombre del Servicio</h4>
                 <p class="list-group-item-text">
-
+                    Diseño e Implementación de Sitios Web
                 </p>
               </a>
 
               <a href="#" class="list-group-item">
                 <h4 class="list-group-item-heading">Definiciones</h4>
                 <p class="list-group-item-text text-success">
-
+                    Solución web: Se refiere al sitio web solicitado por el cliente.
                 </p>
               </a>
 
               <a href="#" class="list-group-item">
                 <h4 class="list-group-item-heading">Abreviaciones</h4>
                 <p class="list-group-item-text">
-
+                    KA: Kool-Aid.
                 </p>
               </a>
 
               <a href="#" class="list-group-item">
                 <h4 class="list-group-item-heading">Descripción del servicio</h4>
                 <p class="list-group-item-text">
-
+                    Este servicio ofrece soluciones web rápidas, simples y visualmente atractivas con diseños dinámicos e interfaces intuitivas para
+                    todo tipo de cliente.
                 </p>
               </a>
 
@@ -84,11 +85,7 @@
               <a href="#" class="list-group-item">
                 <h4 class="list-group-item-heading">Variaciones</h4>
                 <p class="list-group-item-text">
-                    <ul>
-                      <li>
                        Peticiones adicionales que no están detallados en el precio original, ni descritos en el contrato serán valorados y agregado al precio final de la solución web.
-                      </li>
-                    </ul>
                 </p>
               </a>
 
