--- a/templates/servicelevel/hosting_sla.html
+++ b/templates/servicelevel/hosting_sla.html
@@ -16,28 +16,36 @@
               <a href="#" class="list-group-item">
                 <h4 class="list-group-item-heading">Nombre del Servicio</h4>
                 <p class="list-group-item-text">
-
+                    Creación de Virtual Hosts
                 </p>
               </a>
               
               <a href="#" class="list-group-item">
                 <h4 class="list-group-item-heading">Definiciones</h4>
                 <p class="list-group-item-text text-success">
-
+                    <ul>
+                      <li>
+                        Solución Web: Se refiere al sitio web solicitado por el cliente.
+                      </li>
+                     <li>
+                        Host virtual: Unidad que describe a un sitio o dominio, llamado alojamiento virtual en español.
+                      </li>
+                    </ul>
                 </p>
               </a>
               
               <a href="#" class="list-group-item">
                 <h4 class="list-group-item-heading">Abreviaciones</h4>
                 <p class="list-group-item-text">
-
+                    KA: Kool-Aid.
                 </p>
               </a>
               
               <a href="#" class="list-group-item">
                 <h4 class="list-group-item-heading">Descripción del servicio</h4>
                 <p class="list-group-item-text">
-
+                    Este servicio ofrece mejorar el acceso a una solución web, transformando un URL largo a uno más
+                    corto y descriptivo. Esto con el fin de facilitar el acceso a la página y hacerla más memorable.
                 </p>
               </a>
              
@@ -46,7 +54,7 @@
                 <h4 class="list-group-item-heading">Comunicación</h4>
                 <p class="list-group-item-text">
                     La comunicación entre el cliente y el soporte de KA estará disponible en los siguientes horarios:
-                  <ul>
+                    <ul>
                       <li>
                         Lunes a Viernes de 8:00 A.M. a 8 P.M.
                       </li>
@@ -60,7 +68,8 @@
               <a href="#" class="list-group-item">
                 <h4 class="list-group-item-heading">Estimados</h4>
                 <p class="list-group-item-text">
-                    KA le dará el cliente un estimado inicial de su solución web el cual puede variar al final del mismo. El estimado es usualmente usado cuando el precio fijo de una solución no se puede calcular razonablemente o hay posibilidad de cambios en el proceso de creación de la solución.
+                    KA le dará el cliente un estimado inicial de su alojamiento virtual el cual puede variar al final del mismo.
+                    El estimado es usualmente usado cuando el precio fijo no se puede calcular razonablemente o hay posibilidad de cambios.
                 </p>
               </a>
 
@@ -69,13 +78,13 @@
                 <p class="list-group-item-text">
                     <ul>
                       <li>
-                        De ser posible KA siempre le dará al cliente el precio fijo de la solución web.
+                        De ser posible KA siempre le dará al cliente el precio fijo del alojamiento virtual.
                       </li>
                      <li>
                         Cambios agregados a la especificación que se encuentra en un precio fijo serán tratados como variaciones.
                       </li>
                      <li>
-                        Peticiones adicionales que no están detallados en el precio original, ni descritos en el contrato serán valorados y agregado al precio final de la solución web.
+                        Peticiones adicionales que no están detallados en el precio original, ni descritos en el contrato serán valorados y agregado al precio final.
                       </li>
                     </ul>
                 </p>
@@ -84,31 +93,14 @@
               <a href="#" class="list-group-item">
                 <h4 class="list-group-item-heading">Variaciones</h4>
                 <p class="list-group-item-text">
-                    <ul>
-                      <li>
-                       Peticiones adicionales que no están detallados en el precio original, ni descritos en el contrato serán valorados y agregado al precio final de la solución web.
-                      </li>
-                    </ul>
+                       Peticiones adicionales que no están detallados en el precio original, ni descritos en el contrato serán valorados y agregado al precio final.
                 </p>
               </a>
 
               <a href="#" class="list-group-item">
                 <h4 class="list-group-item-heading">Propiedad Intelectual</h4>
                 <p class="list-group-item-text">
-                   <ul>
-                      <li>
-                        El código fuente de la solución web pertenecen a la propiedad intelectual de KA y no podrán ser copiados ni usados por otros miembros sin el consentimiento de KA.
-                      </li>
-                     <li>
-                        Todos los logos, isotipos, eslogan y otros elementos únicos aportados por el cliente, son propiedad intelectual del cliente. KA no tiene permiso de reutilizar ninguno de estos elementos sin consentimiento del cliente.
-                      </li>
-                     <li>
-                        Todos los scripts,styles sheets y cualquier otro archivo usado en la solución web del cliente pertenecen a la propiedad intelectual de KA y no podrán sar copiados ni usados por otros miembros sin el consentimiento de KA.
-                      </li>
-                     <li>
-                        Todas las consultas, funciones / procedimientos almacenados, triggers y demás elementos programados en alguna base de datos SQL / NoSQL pertenecen a la propiedad intelectual de KA y no podrán sar copiados ni usados por otros miembros sin el consentimiento de KA.
-                      </li>
-                    </ul>
+                        El código fuente del alojamiento virtual pertenecen a la propiedad intelectual de KA y no podrán ser copiados ni usados por otros miembros sin el consentimiento de KA.
                 </p>
               </a>
 
@@ -120,7 +112,7 @@
                         Se espera que el cliente haga su pago 7 días desde la fecha en la que recibió su factura.
                       </li>
                      <li>
-                        KA se encargará de definir las fechas de facturación y pago dependiendo del tamaño de la solución web.
+                        KA se encargará de definir las fechas de facturación y pago dependiendo de lo requerido por el alojamiento virtual.
                       </li>
                     </ul>
                 </p>
