--- a/templates/layout.html
+++ b/templates/layout.html
@@ -33,6 +33,7 @@
               <ul class="nav navbar-nav">
                 <li><a href="/">Catálogo</a></li>
                 <li><a href="{{url_for('get_casos')}}">Casos</a></li>
+                  <li><a href="/">Solicitud de Cambio - RFC</a></li>
               </ul>
               <ul class="nav navbar-nav navbar-right">
                 <li><a href="">*</a></li>
