--- a/templates/home/request_change_form.html
+++ b/templates/home/request_change_form.html
@@ -1,5 +1,23 @@
 {% extends "layout.html" %}
 {% block body %}
 
+<div class="row">
 
+    <div class="col-lg-12">
+        <h1>Formulario de Solicitud de Cambio</h1>
+        <hr>
+    </div>
+
+    <div class="col-lg-12">
+
+        <div class="col-lg-12">
+            <form>
+
+            </form>
+        </div>
+
+    </div>
+    <!-- COL ENDS -->
+
+</div>
 {% endblock %}
