Actualización de estado de documentación

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -104,7 +104,10 @@
         Catálogo de Servicios &nbsp;&nbsp; <i class="fa fa-check" style="color: green;" aria-hidden="true"></i>
       </a>
       <a href="#" class="list-group-item">
-        Service Level Agreements (SLAs) <strong>(en progreso)</strong>
+        Service Level Agreements (SLAs) &nbsp;&nbsp; <i class="fa fa-check" style="color: green;" aria-hidden="true"></i>
+      </a>
+      <a href="#" class="list-group-item">
+        RFC &nbsp;&nbsp; <i class="fa fa-check" style="color: green;" aria-hidden="true"></i>
       </a>
     </div>
   </div>
