--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -68,6 +68,48 @@
   
 </div>
 
+
+
+
+
+
+<div class="row">
+  
+  <div class="col-lg-12">
+    <h1>Procesos</h1>
+    <hr>
+  </div>
+  
+  <!-- BEGIN SERVICE -->
+  <div class="col-lg-4">
+    <a href="{{url_for('change_management_home')}}">
+      <div class="panel panel-danger" style="min-height: 18em;">
+        <div class="panel-heading text-center">
+          <i style="color: yellow;" class="fa fa-repeat fa-5x" aria-hidden="true"></i>
+          <h3 class="panel-title">Gestión de Cambios</h3>
+        </div>
+        <div class="panel-body text-justify">
+         
+           Contiene los detalles del plan para gestión de cambios que se realizan en los componentes de cada uno de los servicios ofrecidos por Kool-Aid
+         
+        </div>
+      </div>
+    </a>
+    
+    
+  </div>
+  <!-- END SERVICE -->
+  
+  
+</div>
+
+
+
+
+
+
+
+
 <div class="row">
   
   <div class="col-lg-12">
