--- a/templates/cm/index.html
+++ b/templates/cm/index.html
@@ -7,19 +7,7 @@
         <h1> Plan de Gestión de Cambios </h1>
         <hr>
     </div>
-  
-    <div class="col-lg-12 well well-sm">
-        <h2> Justificación del Plan de Control de Cambios </h2>
-        <p class=text-justify>
-            Para garantizar que los servicios prestados se mantengan disponibles, funcinoales y correctos con el pasar del tiempo, es de suma
-            importancia definir un proceso que permita gestionar la forma como se llevan a cabo cambios en los servicios de manera que se 
-            pueda garantizar el menos impacto en la prestación de servicios y la continuidad de negocio. 
-            <br>
-            El plan de gestión de cambios define una serie de documentos que permiten reunir la información necesaria para poder llevar acabo
-            los cambios en un proyecto desde que este inicia.
-        </p>
-    </div>
-
+    
     <div class="col-lg-12 well well-sm">
         <h2> Definición de Cambio </h2>
         <p class=text-justify>
@@ -27,7 +15,42 @@
             componente de servicio y/o cualquiera de sus elementos asociados. 
         </p>
     </div>
-      
+  
+    <div class="col-lg-12 well well-sm">
+        <h2> Descripción </h2>
+        <p class=text-justify>
+            Para garantizar que los servicios prestados se mantengan disponibles, funcinoales y correctos con el pasar del tiempo, es de suma
+            importancia definir un proceso que permita gestionar la forma como se llevan a cabo cambios en los servicios de manera que se 
+            pueda garantizar el menos impacto en la prestación de servicios y la continuidad de negocio. 
+            <br>
+            <br>
+            El plan de gestión de cambios define una serie de documentos que permiten reunir la información necesaria para poder llevar acabo
+            los cambios en un proyecto desde que este inicia.
+            <br>
+            <br>
+            El proceso de gestión de cambios garantiza el uso de métodos y procedimientos eficientes para gestionar todos cambios que se realizan
+            sobre los servicios brindados por Kool-Aid de manera que estos cambios generen el menos impacto posible sobre la operación y la prestación 
+            de los servicios. 
+            <br>
+            <br>
+            El control de cambios en Kool-Aid inicia con la identificación, documentación y clasificación de los cambios. Posteriormente, se continúa 
+            con el proceso de aprovación de estos, pruebas y luego calendarización para ser implementados. Una vez concluida la implementación, esta
+            es evaluada y medida. En este punto el proceso de gestión de cambio termina. 
+        </p>
+    </div>
+    
+    <div class="col-lg-12 well well-sm">
+        <h2> Objetivos </h2>
+        <ul>
+            <li>
+                <p>Proveer un proceso estructurado para planificar, coordinar e implementar cambios.</p>
+            </li>
+            <li>
+                <p>Minimizar el impacto de los cambios y conservar la disponibilidad de los servicios.</p>  
+            </li>
+        </ul>
+    </div>
+    
     <div class="col-lg-12 well well-sm">
         <h2> Proceso de Control de Cambios </h2>
         <p class=text-justify>
@@ -71,8 +94,67 @@
         </div>
         
     </div>
-    
-  
+      
+    <div class="col-lg-12 well well-sm">
+        <h2> Componentes </h2>
+        <p class="text-justify">
+            Para efectos de este proceso, se asume que las decisiones de técnicas y de negocio que originan un cambio, han sido gestionadas
+            previamente al inicio de este proceso por medio de otros procesos que son externos a la gestión de cambios como tal. El proceso 
+            gestión de cambios tiene los siguientes componentes:
+        </p>
+        
+        <h3>Comité de Aprobación de Cambios</h3>
+        <p class="text-justify">
+            Este grupo se encarga de brindar apoyo al equipo de gestión de cambios por medio de la aprobación de las solicitudes de cambio 
+            y la priorización de estas solicitudes. Este comite está conformado por:
+        </p>
+        <ul>
+            <li>
+                <p>
+                    Gerente de Gestión de Cambios
+                </p>
+            </li>
+            <li>
+                <p>
+                    Expertos Técnicos
+                </p>
+            </li>
+            <li>
+                <p>
+                    Representantes de los clientes / usuarios
+                </p>
+            </li>
+        </ul>
+        <p class="text-justify">
+            Los miembros de este comité deben ser seleccionados cuidadosamente con el objetivo de garantizar que se han incluido las perspectivas
+            tanto técnicas como de negocio. Las reuniones de este comité ocurren de manera regular al menos una vez por semana. 
+        </p>
+        
+         <h3>Recorte de tiempos</h3>
+        <p class="text-justify">
+            El comité de gestión de cambios va a revisar únicamente las solicitudes de cambio que han sido programadas para revisión por el 
+            gerente de gestión de cambios. Las solicitudes que no cuenten con todos los requerimientos no serán aceptados. La fecha límite para
+            recibir solicitudes de camdio es dos días previos a la reunión del comité.
+        </p>
+        
+        <h3>Cambios de Emergencia</h3>
+        <p class="text-justify">
+            Existe un comité de aprobación de cambios de emergencia el cual es el encargado de tomar las decisiones acerca de cambios de 
+            emergencia con un alto impacto. Los cambios de emergencia son únicamente autorizados cuando se deben llevar acabo para reparar
+            un error en alguno de los servicios que está generando un alto impacto en el negocio. Estas acciones se deben realizar de manera
+            inmediata con el objetivo de restablecer un servicio o prevenir un problema mayor. Las reuniones de este comité ocurren cuando se 
+            produce un evento de emergencia y no requieren ser en persona con el objetivo de agilizar el proceso de aprobración. 
+        </p>
+        
+        <h3>Herramienta de Gestión de Cambios</h3>
+        <p class="text-justify">
+            Para administrar el proceso de gestión de cambios, se hace uso de una herramienta denominada HP Service Manager la cual cuenta con un
+            módulo para gestión de cambios. Esta herramienta permite automatizar el proceso de gestión y centraliza la información relacionada a 
+            cada cambio. 
+        </p>
+        
+    </div>
+
 </div>
 
 {% endblock %}
