Se agregó diagrama del proceso

--- a/templates/cm/index.html
+++ b/templates/cm/index.html
@@ -19,7 +19,7 @@
     <div class="col-lg-12 well well-sm">
         <h2> Descripción </h2>
         <p class=text-justify>
-            Para garantizar que los servicios prestados se mantengan disponibles, funcinoales y correctos con el pasar del tiempo, es de suma
+            Para garantizar que los servicios prestados se mantengan disponibles, funcionales y correctos con el pasar del tiempo, es de suma
             importancia definir un proceso que permita gestionar la forma como se llevan a cabo cambios en los servicios de manera que se 
             pueda garantizar el menos impacto en la prestación de servicios y la continuidad de negocio. 
             <br>
@@ -154,6 +154,23 @@
         </p>
         
     </div>
+    
+    
+    <div class="col-lg-12 well well-sm">
+        <h2> Proceso de Gestión de Cambios</h2>
+        <p class=text-justify>
+            A continuación se detallan las actividades que conforman el proceso de gestión de cambios.
+        </p>
+        
+        <div class="hdl col-lg-12">
+            <center>
+                <img width="95%" src="{{ url_for('static', filename='img/cm.png') }}"/>
+            </center>
+            
+        </div>
+        
+    </div>
+    
 
 </div>
 
