--- a/static/css/satellite.css
+++ b/static/css/satellite.css
@@ -16,8 +16,12 @@ body{
     width:100%;
 }
 
+.hdl{
+  padding: 5px;
+}
+
 img {
-    position:absolute;
+    position:relative;
     top:0;
     left:0;
     right:0;
