--- a/templates/cm/index.html
+++ b/templates/cm/index.html
@@ -87,8 +87,8 @@
                 6 - Evaluación de cambios y cierre
             </a>
             
-            <a href="#" class="list-group-item">
-                2 - Manejo de cambios de emergencia
+            <a href="#" class="list-group-item active">
+                * - Manejo de cambios de emergencia
             </a>
             
         </div>
